--- a/ml update/index.html
+++ b/ml update/index.html
@@ -16,7 +16,7 @@
     <h1 id="heading">Album</h1>
 
     <script type="text/javascript">
-      alert("Welcome to my album! Feel free to make some poses to unlock my memories. Please make sure your entire upper body is in the camera. Enjoy💆‍♀️🌼!");
+      alert("Welcome to my album! Feel free to make some poses to unlock my memories. Please make sure your entire upper body (from the top of the head to the waist) is in the camera. Enjoy💆‍♀️🌼!");
     </script>
 
     <div class="images">
