watermark name fonts

--- a/ml update/index.html
+++ b/ml update/index.html
@@ -9,13 +9,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Long+Cang&family=Nanum+Pen+Script&family=Nothing+You+Could+Do&family=Reenie+Beanie&family=Rock+3D&family=Special+Elite&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Uncial+Antiqua&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Iceberg&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barrio&family=Black+Ops+One&family=Marcellus+SC&family=Megrim&family=Rubik+Glitch&family=Walter+Turncoat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Atomic+Age&family=Barriecito&family=Bungee+Hairline&family=Caesar+Dressing&family=Cute+Font&family=Elsie+Swash+Caps&family=Ribeye+Marrow&family=Stick+No+Bills:wght@200&family=Train+One&family=Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Atomic+Age&family=Barriecito&family=Bungee+Hairline&family=Caesar+Dressing&family=Cute+Font&family=Elsie+Swash+Caps&family=Poiret+One&family=Ribeye+Marrow&family=Stick+No+Bills:wght@200&family=Syncopate&family=Train+One&family=Vibes&display=swap" rel="stylesheet">
   </head>
   <body>
 
-    <h1 id="heading">Album</h1>
+    <h1 id="heading">Pose-Link Album</h1>
 
-    <script type="text/javascript">
+    <script type="text/javascript" class="alert">
       alert("Welcome to my album! Feel free to make some poses to unlock my memories. Please make sure your entire upper body (from the top of the head to the waist) is in the camera. Enjoy💆‍♀️🌼!");
     </script>
 
@@ -32,7 +37,7 @@
     <div class="results">
       <div id="result_tiya">
         <img src="images/tiya.jpeg" alt="">
-        <p>Since I ate Japanese food with tiya once, all Japanese food has been branded with her name. Miss her so much.</p>
+        <p>Since I ate Japanese food with Tiya once, all Japanese food has been branded with her name. Miss her so much.</p>
       </div>
       <div id="result_amusement">
         <img src="images/amusement.jpeg" alt="">
@@ -116,6 +121,10 @@
   </div>
 
   <div id="canvas">
+  </div>
+
+  <div id="waterMark">
+    <p>Unlock my memories by taking up similar postures. <a id="important">Please make sure your entire upper body (from the top of the head to the waist) is visible.</a><br>Project by Aislynn Li, 2022.</p>
   </div>
 
     <script src="js/script.js">
