--- a/ml update/index.html
+++ b/ml update/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Sharing Album: Memories Through Poses</title>
+    <title>Pose-Link Album: Memories Sharing Through Poses</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/p5.js"></script>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
